--- a/INDEX1.html
+++ b/INDEX1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GOAL!|A career guide to all students</title>
+  <title>GOAL!</title>
   <link rel="icon" href="favicon.ico" type="image/ico" sizes="16*16">
 </head>
 <body>
@@ -27,9 +27,7 @@
                         </ul>
                 </div>
             </label><!--HOME  ICON FOR NAVIGATION-->
-                <div class="othericon">
-                    <a href="index.html"><i class="fa fa-home"></i></a>&nbsp;
-                </div>
+                
         </div>
         <div class="container"><!--HEADER-->
             <h1>
@@ -94,8 +92,8 @@
                 <b><i> E-mail: </i></b><a href="lkushal2005@gmail.com">lkushal2005@gmail.com</a>
                 <br>&nbsp;
                 <p class="iconbar">
-                <a href="www.linkedin.com/in/KUSHALJECEVTMT"><i class="fa-brands fa-linkedin"></i></a>&nbsp;&nbsp;&nbsp;
-                <i class="fa-brands fa-instagram"></i>
+                <a href="https://www.linkedin.com/in/kushaljecevtmt?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-linkedin"></i></a>&nbsp;&nbsp;&nbsp;
+                <a href="https://www.instagram.com/kushalj23?utm_source=qr&igsh=enp0YjJnaWhzZzJh"><i class="fa-brands fa-instagram"></i></a>
                 </p>
             </div> 
                 <br>
@@ -106,8 +104,8 @@
                 <br>
                 <b><i>E-mail: </i></b><a href="minuprabhap73@gmail.com">minuprabhap@gmail.com</a>
                 <p class="iconbar">
-                <i class="fa-brands fa-linkedin"></i>&nbsp;&nbsp;&nbsp;
-                <i class="fa-brands fa-instagram"></i>
+                <a href="https://www.linkedin.com/in/minu-prabha-2a694227b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-linkedin"></i></a>&nbsp;&nbsp;&nbsp;
+                <a href="https://www.instagram.com/secret._fruity._54?igsh=djcwZTNmY251aWV1"><i class="fa-brands fa-instagram"></i></a>
             </div>
             </p>
 </body>
