--- a/mainpage.html
+++ b/mainpage.html
@@ -20,7 +20,7 @@
                 <div class="navbar2"><!--MENU BAR CONTENT-->
                     <h2 class="header1">MENU</h2>
                         <ul>
-                            <li><a href="INDEX1.html"><i class="fa fa-home"></i>HOME</a>
+                            <li><a href="mainpage.html"><i class="fa fa-home"></i>HOME</a>
                             <li><a href="index.html"><i class="fa-solid fa-comment-dots"></i>CHATBOT</a></li>
                             <li><a href="register.html"><i class="fa-solid fa-circle-info"></i>for more details</a></li>
                             <li><a href="register.html"><i class="fa-solid fa-user"></i>LOGIN OR SIGN UP</a></li>
